--- a/src/site.ejs
+++ b/src/site.ejs
@@ -47,6 +47,11 @@
 			transform: scale(1.1);
 		}
 
+		button svg:hover {
+			fill: #C9C9C9;
+			transform: rotate(-19deg);
+		}
+
     </style>
 </head>
 <body class="font-custom bg-white">
@@ -153,7 +158,8 @@
     </header>
     <div class="absolute inset-0 bg-black opacity-50"></div>
     <div class="container relative items-center flex flex-col justify-center py-12 sm:pt-20">
-        <h1 class="text-4xl md:text-5xl lg:text-6xl xl:text-7xl font-bold text-center text-white z-10">Welcome to Rest Cafe</h1>
+        <h1 class="text-4xl md:text-5xl lg:text-6xl xl:text-7xl font-bold text-center text-white z-10">Welcome to Rest
+            Cafe</h1>
         <p class="text-lg md:text-xl lg:text-2xl xl:text-3xl text-center mt-4 px-4 md:px-0 text-white z-10">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla facilisi. Sed euismod, nunc eget aliquet
             lacinia, mauris nunc tincidunt nunc, id tincidunt urna ligula id nunc. Sed euismod, nunc eget aliquet
@@ -605,17 +611,17 @@
     </div>
 </footer>
 <button id="scrollTopBtn" class="hidden fixed bottom-4 right-4 text-white px-2 py-2 z-50">
-    <svg class="transition-transform" fill="#FFF" height="65px" width="65px" version="1.1" xmlns="http://www.w3.org/2000/svg"
+    <svg class="transition-transform" fill="#FFF" height="65px" width="65px"
          viewBox="-47 -47 564.00 564.00" enable-background="new 0 0 470 470"
          stroke="#FFF" stroke-width="0.0047">
-        <g id="SVGRepo_bgCarrier" stroke-width="0">
-            <rect x="-47" y="-47" width="564.00" height="564.00" rx="282" fill="#8F1628" strokewidth="0"/>
+        <g stroke-width="0">
+            <rect x="-47" y="-47" width="564.00" height="564.00" rx="282" fill="#8F1628" />
         </g>
-        <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"/>
-        <g id="SVGRepo_iconCarrier">
+        <g stroke-linecap="round" stroke-linejoin="round" />
+        <g>
             <g>
-                <path d="m257.044,354.256c13.729,0 25.517-4.526 34.088-13.086 11.183-11.206 15.419-27.645 11.976-46.348-3.259-17.702-13.119-35.517-27.766-50.163-18.106-18.106-41.428-28.916-62.386-28.916-13.74,0-25.534,4.531-34.108,13.105-11.155,11.156-15.4,27.609-11.955,46.33 3.259,17.702 13.12,35.517 27.766,50.163 18.106,18.106 41.428,28.915 62.385,28.915zm-72.141-108.747l19.542,19.542c1.465,1.465 3.384,2.197 5.304,2.197 1.919,0 3.839-0.732 5.304-2.197 2.929-2.929 2.929-7.678 0-10.606l-19.547-19.547c4.898-2.734 10.809-4.154 17.451-4.154 17.067,0 36.424,9.167 51.778,24.522 12.519,12.518 20.907,27.531 23.621,42.272 1.928,10.472 0.76,19.771-3.257,26.953l-48.833-48.833c-2.929-2.929-7.677-2.93-10.607,0-2.929,2.929-2.929,7.678 0,10.606l48.838,48.838c-4.898,2.734-10.81,4.154-17.452,4.154-17.067,0-36.424-9.167-51.778-24.522-12.519-12.518-20.907-27.53-23.62-42.272-1.929-10.471-0.762-19.771 3.256-26.953z"/>
-                <path d="M397.5,60h-24.145L359.776,5.681C358.941,2.342,355.941,0,352.5,0h-235c-3.441,0-6.441,2.342-7.276,5.681L96.645,60H72.5 c-4.143,0-7.5,3.358-7.5,7.5v40c0,4.142,3.357,7.5,7.5,7.5h8.107l13.156,155.685c0.331,3.913,3.608,6.869,7.465,6.869 c0.212,0,0.426-0.009,0.641-0.027c4.127-0.349,7.19-3.977,6.842-8.104L101.154,180h267.693L351.1,390H118.9l-7.663-90.685 c-0.35-4.128-3.984-7.202-8.105-6.842c-4.127,0.349-7.19,3.977-6.842,8.104l13.736,162.553c0.328,3.884,3.576,6.869,7.474,6.869 h235c3.897,0,7.146-2.985,7.474-6.869L389.393,115h8.107c4.143,0,7.5-3.358,7.5-7.5v-40C405,63.358,401.643,60,397.5,60z M124.393,455l-4.225-50h229.665l-4.225,50H124.393z M370.114,165H99.886l-4.225-50h278.678L370.114,165z M390,100h-7.631 C382.363,100,80,100,80,100V75h22.344c0.106,0.002,0.216,0.002,0.324,0H337.5c4.143,0,7.5-3.358,7.5-7.5s-3.357-7.5-7.5-7.5 H112.105l11.25-45h223.289l13.579,54.319C361.059,72.658,364.059,75,367.5,75H390V100z"/>
+                <path d="m257.044,354.256c13.729,0 25.517-4.526 34.088-13.086 11.183-11.206 15.419-27.645 11.976-46.348-3.259-17.702-13.119-35.517-27.766-50.163-18.106-18.106-41.428-28.916-62.386-28.916-13.74,0-25.534,4.531-34.108,13.105-11.155,11.156-15.4,27.609-11.955,46.33 3.259,17.702 13.12,35.517 27.766,50.163 18.106,18.106 41.428,28.915 62.385,28.915zm-72.141-108.747l19.542,19.542c1.465,1.465 3.384,2.197 5.304,2.197 1.919,0 3.839-0.732 5.304-2.197 2.929-2.929 2.929-7.678 0-10.606l-19.547-19.547c4.898-2.734 10.809-4.154 17.451-4.154 17.067,0 36.424,9.167 51.778,24.522 12.519,12.518 20.907,27.531 23.621,42.272 1.928,10.472 0.76,19.771-3.257,26.953l-48.833-48.833c-2.929-2.929-7.677-2.93-10.607,0-2.929,2.929-2.929,7.678 0,10.606l48.838,48.838c-4.898,2.734-10.81,4.154-17.452,4.154-17.067,0-36.424-9.167-51.778-24.522-12.519-12.518-20.907-27.53-23.62-42.272-1.929-10.471-0.762-19.771 3.256-26.953z" />
+                <path d="M397.5,60h-24.145L359.776,5.681C358.941,2.342,355.941,0,352.5,0h-235c-3.441,0-6.441,2.342-7.276,5.681L96.645,60H72.5 c-4.143,0-7.5,3.358-7.5,7.5v40c0,4.142,3.357,7.5,7.5,7.5h8.107l13.156,155.685c0.331,3.913,3.608,6.869,7.465,6.869 c0.212,0,0.426-0.009,0.641-0.027c4.127-0.349,7.19-3.977,6.842-8.104L101.154,180h267.693L351.1,390H118.9l-7.663-90.685 c-0.35-4.128-3.984-7.202-8.105-6.842c-4.127,0.349-7.19,3.977-6.842,8.104l13.736,162.553c0.328,3.884,3.576,6.869,7.474,6.869 h235c3.897,0,7.146-2.985,7.474-6.869L389.393,115h8.107c4.143,0,7.5-3.358,7.5-7.5v-40C405,63.358,401.643,60,397.5,60z M124.393,455l-4.225-50h229.665l-4.225,50H124.393z M370.114,165H99.886l-4.225-50h278.678L370.114,165z M390,100h-7.631 C382.363,100,80,100,80,100V75h22.344c0.106,0.002,0.216,0.002,0.324,0H337.5c4.143,0,7.5-3.358,7.5-7.5s-3.357-7.5-7.5-7.5 H112.105l11.25-45h223.289l13.579,54.319C361.059,72.658,364.059,75,367.5,75H390V100z" />
             </g>
         </g>
     </svg>
